corpus/spec.txt
================================================================================
MPX 基础组件结构
================================================================================
<template>
  <view class="container">
    <text>Hello MPX</text>
  </view>
</template>

<script>
import { createComponent } from '@mpxjs/core'

createComponent({
  data: {
    message: 'Hello MPX'
  }
})
</script>

<style>
.container {
  padding: 20rpx;
}
</style>

<script type="application/json">
{
  "navigationBarTitleText": "MPX Page"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (text)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX 小程序指令 - 条件渲染
================================================================================
<template>
  <view>
    <text wx:if="{{showText}}">显示文本</text>
    <text wx:elif="{{showElseIf}}">否则如果</text>
    <text wx:else>否则</text>
  </view>
</template>

<script>
createComponent({
  data: {
    showText: true,
    showElseIf: false
  }
})
</script>

<style>
</style>

<script type="application/json">
{
  "navigationBarTitleText": "条件渲染"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name))
      (element
        (start_tag
          (tag_name)
          (wx_directive_attribute
            (directive_name)
            (quoted_attribute_value
              (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
      (element
        (start_tag
          (tag_name)
          (wx_directive_attribute
            (directive_name)
            (quoted_attribute_value
              (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
      (element
        (start_tag
          (tag_name)
          (wx_directive_attribute
            (directive_name)))
        (text)
        (end_tag
          (tag_name)))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX 小程序指令 - 列表渲染
================================================================================
<template>
  <view>
    <view wx:for="{{items}}" wx:key="id">
      <text>{{index}}: {{item.name}}</text>
    </view>
  </view>
</template>

<script>
createComponent({
  data: {
    items: [
      { id: 1, name: 'Item 1' },
      { id: 2, name: 'Item 2' }
    ]
  }
})
</script>

<style>
</style>

<script type="application/json">
{
  "navigationBarTitleText": "列表渲染"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name))
      (repeat
        (element
          (start_tag
            (tag_name)
            (wx_directive_attribute
              (directive_name)
              (quoted_attribute_value
                (attribute_value)))
            (wx_directive_attribute
              (directive_name)
              (quoted_attribute_value
                (attribute_value))))
          (text)
          (element
            (start_tag
              (tag_name))
            (interpolation
              (raw_text))
            (text)
            (interpolation
              (raw_text))
            (end_tag
              (tag_name)))
          (text)
          (end_tag
            (tag_name))))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX 事件绑定
================================================================================
<template>
  <view>
    <button bindtap="handleTap">点击我</button>
    <button catchtap="handleCatch">捕获阻止</button>
    <input bindinput="handleInput" />
  </view>
</template>

<script>
createComponent({
  methods: {
    handleTap() {
      console.log('tapped')
    },
    handleCatch() {
      console.log('catch tapped')
    },
    handleInput(e) {
      console.log('input:', e.detail.value)
    }
  }
})
</script>

<style>
</style>

<script type="application/json">
{
  "navigationBarTitleText": "事件绑定"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (event_binding
          (event_name)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (text)
    (element
      (start_tag
        (tag_name)
        (event_binding
          (event_name)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (text)
    (element
      (start_tag
        (tag_name)
        (event_binding
          (event_name)
          (quoted_attribute_value
            (attribute_value))))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX 跨平台条件编译 - 模板
================================================================================
<template mode="ali">
  <button onTap="handleTap">支付宝按钮</button>
</template>

<template mode="weixin">
  <button bindtap="handleTap">微信按钮</button>
</template>

<script>
createComponent({
  methods: {
    handleTap() {
      console.log('button tapped')
    }
  }
})
</script>

<style>
</style>

<script type="application/json">
{
  "navigationBarTitleText": "跨平台"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name)
      (mode_attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (element
      (start_tag
        (tag_name)
        (event_binding
          (event_name)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (template_element
    (start_tag
      (tag_name)
      (mode_attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (element
      (start_tag
        (tag_name)
        (event_binding
          (event_name)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX 配置块 - CommonJS 模式
================================================================================
<template>
  <view>
    <text>Hello CommonJS Config</text>
  </view>
</template>

<script>
createComponent({
  data: {
    message: 'Hello CommonJS Config'
  }
})
</script>

<style>
</style>

<script name="json">
module.exports = {
  "navigationBarTitleText": "CommonJS Config",
  "usingComponents": {}
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name))
      (text)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
MPX Vue 风格指令兼容
================================================================================
<template>
  <view>
    <text v-if="showText">Vue 风格指令</text>
    <text v-for="item in items" :key="item.id">{{item.name}}</text>
    <input v-model="inputValue" />
    <button @click="handleClick">点击</button>
  </view>
</template>

<script>
createComponent({
  data: {
    showText: true,
    items: [{ id: 1, name: 'Item 1' }],
    inputValue: ''
  },
  methods: {
    handleClick() {
      console.log('clicked')
    }
  }
})
</script>

<style>
</style>

<script type="application/json">
{
  "navigationBarTitleText": "Vue 风格"
}
</script>

--------------------------------------------------------------------------------

(component
  (template_element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (directive_attribute
          (directive_name)
          (directive_argument)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (element
      (start_tag
        (tag_name)
        (directive_attribute
          (directive_name)
          (directive_argument)
          (quoted_attribute_value
            (attribute_value)))
        (directive_attribute
          (directive_name)
          (directive_argument)
          (quoted_attribute_value
            (attribute_value))))
        (interpolation
          (raw_text))
        (end_tag
          (tag_name)))
    (element
      (start_tag
        (tag_name)
        (directive_attribute
          (directive_name)
          (quoted_attribute_value
            (attribute_value))))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name)
        (directive_attribute
          (directive_name)
          (directive_argument)
          (quoted_attribute_value
            (attribute_value))))
        (text)
        (end_tag
          (tag_name)))
    (text)
    (end_tag
      (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (json_config_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))
